2008-11-26  Badlop  <badlop@process-one.net>

	* src/ejabberdctl.template: Fix detection of ejabberdctl.cfg path

	* src/mod_irc/mod_irc.erl: Announce disco#info (thanks to Spike)
	* src/mod_muc/mod_muc.erl: Announce disco#info disco#items
	* src/mod_proxy65/mod_proxy65_service.erl: No announce disco#items
	* src/mod_pubsub/mod_pubsub.erl: Announce disco#info disco#items
	* src/mod_vcard.erl: Announce disco#info

	* src/gen_mod.erl: First store module options in ETS and Mnesia,
	then start the module. In case of failure, remove options from
	ETS. Until now the module was started before the options were
	stored in database, and some modules started incorrectly because
	they couldn't access the options from database; for instance
	mod_muc_room required this for reading max_users option.

	* src/mod_muc/mod_muc_room.erl: Include the value of max_users
	service option and the current max_users room option in the list
	of allowed room limit values.

2008-10-17  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/node_pep.erl: Fix get_node_affiliations resultset to
	owner (Thanks to Michal Schmidt)

2008-11-24  Evgeniy Khramtsov <ekhramtsov@process-one.net>

	* src/eldap/Makefile.in: added +optimize and +driver
	compilation options
	* src/eldap/Makefile.win32: Likewise

2008-11-23  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_receiver.erl: Hibernate after timeout
	* src/ejabberd_frontend_socket.erl: Likewise

2008-11-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.erl: Include recognized headers in
	request_headers as atoms, and others as strings (EJAB-778).
	URL path should be tokenized by / and then decoded (EJAB-786).

	* doc/guide.tex: Improve legibility of mod_irc example config

2008-11-10  Alexey Shchepin  <alexey@process-one.net>

	* src/tls/tls_drv.c: Don't create a SSL context on every
	connection and disable SSLv2 on outgoing connections (EJAB-781)

2008-11-08  Mickael Remond  <mremond@process-one.net>
