@@ -1,3 +1,8 @@
+2008-11-28  Alexey Shchepin  <alexey@process-one.net>
+
+	* src/mod_muc/mod_muc_room.erl: Clean user activity after timeout
+	(EJAB-804)
+
 2008-11-26  Badlop  <badlop@process-one.net>
 
 	* src/ejabberdctl.template: Fix detection of ejabberdctl.cfg path
